<resources>
    <string name="app_name">Checkbox Home Work Randy</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="oreo_cookie_crumbles">Oreo cookie crumbles</string>
    <string name="show_toast">Show Toast</string>
</resources>